tests/fail/test-neg-type-conflicts2.ctds
integer main(){
  return 4 + true && false;
}
